# packetscope

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: incident-flows.json
src/packetscope/: __init__.py  cli.py  core.py
tests/: test_analysis.py  test_core.py
