[build-system]
requires=["hatchling"]
build-backend="hatchling.build"

[project]
name="packetscope"
version="0.1.0"
description="Summarize packet and flow records into explainable findings."
readme="README.md"
requires-python=">=3.11"
license={text="Apache-2.0"}
authors=[{name="John Johansson"}]

[project.optional-dependencies]
dev=["pytest>=8","ruff>=0.5"]

[tool.hatch.build.targets.wheel]
packages=["src/packetscope"]
