[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "packetscope"
version = "0.2.0"
description = "Explain packet and flow anomalies from portable JSON records."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "John Johansson"}]

[project.scripts]
packetscope = "packetscope.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[tool.hatch.build.targets.wheel]
packages = ["src/packetscope"]

[tool.ruff]
line-length = 100
